From:    tektronix!zeus.TEK.COM!tims@ucbvax.Berkeley.EDU
Date:    30 Nov 87 15:08:15 PST (Mon)
To:      okeeffe.Berkeley.EDU!mckusick@ucbvax.Berkeley.EDU (Kirk McKusick)
Subject: Re: Public domain rogue
Return-Path: tektronix!zeus.TEK.COM!tims@ucbvax.Berkeley.EDU

Here is a list of discrepencies from the documentation you sent me:

The -d option not implemented.
The -r option not implemented, use "rogue save_file" instead.
Strength is between 1 and 99, not 3 and 32.
The D command is not implemented.
Only scrolls,potions,wands,and rings may be "call"ed something.
The ^P command may be used to go 4 messages back, instead of just 1.
The @ comand is not implemented.
There are no dark rooms.
ROGUEOPTS of flush,terse,seefloor,askme,inventory are ignored.
	'askquit' is added to prevent ^\ from terminating the game accidentally.
	If 'noaskquit' is
	found in the ROGUEOPTS string, the the ^\ kills the game, otherwise,
	the player is asked if he really wants to quit.  In either case, no
	score file processing is attempted.
The score is keyed to winning scores, and no player may appear twice.






Other differences from "standard" rogue 5.3.  This list covers externally
visible differences only.

There should be NO bugs with any severe consequences.  Absolutely NO
    game-stopping, or game-winning bugs should be present.
Traps fail occasionally, that is, they sometimes are sprung but miss.
The ^A command prints out some stuff you're probably not interested in.
The '&' command silently saves your screen into the file 'rogue.screen'
Any inventory selection command that takes '*' as a request to list all
    appropriate items, can take one of "=?:)]!/" to list only rings,
    scrolls, or whatever.
Scrolls and potions, once used, become identified.  All other objects become
    identified only by scroll of identification.
There is only one scroll of identification, and it works on any item.
ROGUEOPTS
    Only the following are implemented: