@@ -1,3 +1,5 @@
+$NetBSD: CHANGES,v 1.2 1995/04/22 10:27:22 cgd Exp $
+
 From:    tektronix!zeus.TEK.COM!tims@ucbvax.Berkeley.EDU
 Date:    30 Nov 87 15:08:15 PST (Mon)
 To:      okeeffe.Berkeley.EDU!mckusick@ucbvax.Berkeley.EDU (Kirk McKusick)
